added Styled components and refactor list of color to use .map and enum

--- a/src/App.css
+++ b/src/App.css
@@ -29,3 +29,12 @@ table {
   th {
     background-color: lightgray;
   }
+
+  button {
+    cursor: pointer;
+  }
+
+  h3 {
+    text-decoration: underline;
+  }
+
