feat: added darkmode minor example using context

--- a/src/App.css
+++ b/src/App.css
@@ -38,3 +38,12 @@ table {
     text-decoration: underline;
   }
 
+  .dark {
+    background-color: #333;
+    color: #fff;
+  }
+  
+  .light {
+    background-color: #fff;
+    color: #333;
+  }
