--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,32 @@ a {
     background-color: #fff;
     color: #333;
   }
+
+  .loading-spinner {
+    position: relative;
+    width: 64px;
+    height: 64px;
+    
+  }
+  
+  .loading-spinner::before {
+    content: "";
+    box-sizing: border-box;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    width: 50px;
+    height: 50px;
+    margin-top: -25px;
+    margin-left: -25px;
+    border-radius: 50%;
+    border: 2px solid #ccc;
+    border-top-color: #333;
+    animation: loading-spinner 1s linear infinite;
+  }
+  
+  @keyframes loading-spinner {
+    to {
+      transform: rotate(360deg);
+    }
+  }
